# polishingrobot_planner

./: CMakeLists.txt  package.xml  readme.md
data/: test_pcd.pcd
include/: aubo_kinematics.h
launch/: aubo_rosdriver.launch  polishingrobot_configuration.launch  polishingrobot_moveit_trajectoryplanning.launch
matlab/: FOV_computation.m  coverage_width_computation.m  main.m~  main1.m  main2.m  main3.m  renovation_cells_waypath_visualization.m  renovation_mobileplatform_visualization.m  scan_data1.mat  scan_data2.mat
matlab/bim_document/: scan_20200716.tif  scan_20200716.txt
mesh/: 1.stl  20200716_scan_planning_2.stl  stl_processing.m  stl_read.m  stl_write.m
scripts/: aubo_motion.py  display_plannedpath_example.py  moveit_planning_trajectory.json  moveit_planning_trajectory1.json  obtain_plannedpath.py  polishingrobot_states_publish.py  trajectory.py  trajectory.txt
scripts/aubo_driver/: aubo_control_rosdriver1.py  aubo_rosdriver1_test.py  move_aubo_to_a_point1.py
scripts/planning/: datastruct.json  json.txt  polishingrobot_mobileplatform_positions_planner.py
scripts/robotic_functions/: aubo_kinematics.py
scripts/visualization/: polishingrobot_mobileplatform_positions_visualization.py  waypoints_paths_visualization_functions.py
src/: aubo_kinematics.cpp  manipulator_viewpoints_planning.cpp  manipulator_viewpoints_planning1.cpp  manipulator_viewpoints_planning_backup.cpp  manipulator_viewpoints_trajectory_planning.cpp  manipulator_viewpoints_visualizing.cpp  mobileplatform_planningresult_visualization.cpp  move_group_aubo_tutorial.cpp  moveit_collision_detection.cpp  onecellviewpoints_candidatejointsolutions_dict.json  onecellviewpoints_position_dict.json  onecellviewpoints_selectedjointsolutions_dict.json  onecellviewpoints_selectedjointsolutions_dict_deg.json  polishingrobot_states_pub.cpp  polishingrobot_states_pubsub.cpp
src/coveragestate_visualization/: nav_gridcells_test.cpp  nav_occupancygrid_test.cpp  octomap_occupancymapgrid_test.cpp
src/useless/: manipulator_viewpoints_planning.cpp  manipulator_viewpoints_trajectory_planning1.cpp  motion_planning_aubo.cpp  polishingrobot_states_pubsub.cpp  polishingrobot_states_sub.cpp  polishingrobot_statespub_collisiondetection.cpp
